--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -14,180 +14,182 @@ html(lang="ru")
     //- link(href="../img/favicon.ico" rel="shortcut icon")
 
   body
-    .icons
-    header.header
-        .header__top
-            .container.container_wrapper.d-flex.flex-wrap.align-items-center.px-sm-0
-                .col-xl-6.col-lg-12.col-8.d-flex.align-items-center.justify-content-xl-start.justify-content-lg-between.mb-xl-0.mb-lg-2
-                    .contacts.col-xl-7.col-lg-5.w-auto.px-0
-                        .contacts__item.contacts__item_notitle
-                            svg.contacts__item-icon
-                                use(xlink:href="#icon-placemark")
-                            span.contacts__item-title г. Ростов-на-Дону
-                        a.contacts__item.contacts__item_notitle(href="#")
-                            svg.contacts__item-icon
-                                use(xlink:href="#icon-phone")
-                            span.contacts__item-title +7 (365) 277-70-68
-                    .social
-                        a.social__item(href="#")
-                            svg.icon-fluid
-                                use(xlink:href="#icon-wapp")
-                        a.social__item(href="#")
-                            svg.icon-fluid
-                                use(xlink:href="#icon-tg")
-                .col-xl-5.col-lg-10.d-none.d-lg-block
-                    nav.header__nav.justify-content-xl-end.justify-content-between
-                        a.header__nav-item(href="#") Скидки и акции
-                        a.header__nav-item(href="#") Бонусные рубли
-                        a.header__nav-item(href="#") Контакты
-                .col-xl-1.col-lg-2.col-4.d-flex.align-items-xl-start.justify-content-end
-                    .menu
-                        button.menu__title(type="button")
-                            | Помощь
-                            svg.menu__icon
-                                use(xlink:href="#icon-dropdown")
-                        .menu__wrapper
-        .header__wrapper
-            .header__col.header__col_logo.col-xl-4.col-lg-5.mb-3
-                a.logo.mr-4(href="#")
-                    svg.icon-fluid
-                        use(xlink:href="#icon-logo")
-                nav.header__nav.justify-content-center
-                    a.header__btn.mr-3(href="#")
-                        svg.header__btn-icon
-                            use(xlink:href="#icon-menu")
-                        span.header__btn-title Каталог
-                    a.header__btn(href="#")
-                        svg.header__btn-icon
-                            use(xlink:href="#icon-services")
-                        span.header__btn-title Услуги
-            .header__col.header__col_search.col-xl-3.mb-3
-                form.search(action="#" method="post")
-                    input.search__field(type="text" placeholder="Я ищу..." value="")
-                    button.search__btn(type="submit")
+    block header
+        .icons
+        header.header
+            .header__top
+                .container.container_wrapper.d-flex.flex-wrap.align-items-center.px-sm-0
+                    .col-xl-6.col-lg-12.col-8.d-flex.align-items-center.justify-content-xl-start.justify-content-lg-between.mb-xl-0.mb-lg-2
+                        .contacts.col-xl-7.col-lg-5.w-auto.px-0
+                            .contacts__item.contacts__item_notitle
+                                svg.contacts__item-icon
+                                    use(xlink:href="#icon-placemark")
+                                span.contacts__item-title г. Ростов-на-Дону
+                            a.contacts__item.contacts__item_notitle(href="#")
+                                svg.contacts__item-icon
+                                    use(xlink:href="#icon-phone")
+                                span.contacts__item-title +7 (365) 277-70-68
+                        .social
+                            a.social__item(href="#")
+                                svg.icon-fluid
+                                    use(xlink:href="#icon-wapp")
+                            a.social__item(href="#")
+                                svg.icon-fluid
+                                    use(xlink:href="#icon-tg")
+                    .col-xl-5.col-lg-10.d-none.d-lg-block
+                        nav.header__nav.justify-content-xl-end.justify-content-between
+                            a.header__nav-item(href="#") Скидки и акции
+                            a.header__nav-item(href="#") Бонусные рубли
+                            a.header__nav-item(href="#") Контакты
+                    .col-xl-1.col-lg-2.col-4.d-flex.align-items-xl-start.justify-content-end
+                        .menu
+                            button.menu__title(type="button")
+                                | Помощь
+                                svg.menu__icon
+                                    use(xlink:href="#icon-dropdown")
+                            .menu__wrapper
+            .header__wrapper
+                .header__col.header__col_logo.col-xl-4.col-lg-5.mb-3
+                    a.logo.mr-4(href="#")
                         svg.icon-fluid
-                            use(xlink:href="#icon-search")
-            .header__col.header__col_nav.col-xl-5.col-lg-7.mb-3
-                nav.header__nav.flex-grow-1.mr-lg-5
-                    button.header__nav-item.header__nav-item_col.d-flex.d-lg-none(type="button")
-                        span.header__nav-icon
+                            use(xlink:href="#icon-logo")
+                    nav.header__nav.justify-content-center
+                        a.header__btn.mr-3(href="#")
+                            svg.header__btn-icon
+                                use(xlink:href="#icon-menu")
+                            span.header__btn-title Каталог
+                        a.header__btn(href="#")
+                            svg.header__btn-icon
+                                use(xlink:href="#icon-services")
+                            span.header__btn-title Услуги
+                .header__col.header__col_search.col-xl-3.mb-3
+                    form.search(action="#" method="post")
+                        input.search__field(type="text" placeholder="Я ищу..." value="")
+                        button.search__btn(type="submit")
                             svg.icon-fluid
                                 use(xlink:href="#icon-search")
-                        span.header__btn-title Поиск
-                    a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
-                        span.header__nav-icon
-                            svg.icon-fluid
-                                use(xlink:href="#icon-compare")
-                        span.header__btn-title Сравнить
-                    a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
-                        span.header__nav-icon
-                            svg.icon-fluid
-                                use(xlink:href="#icon-car")
-                        span.header__btn-title Выбор авто
-                    a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
-                        span.header__nav-icon
-                            svg.icon-fluid
-                                use(xlink:href="#icon-case")
-                        span.header__btn-title Заказы
-                    a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
-                        span.header__nav-icon
-                            svg.icon-fluid
-                                use(xlink:href="#icon-user")
-                        span.header__btn-title Вход | регистрация
-                a.header__btn.header__btn_inverse(href="#")
-                    svg.header__btn-icon.mr-0
-                        use(xlink:href="#icon-cart")
-        .header__bottom
-            nav.topmenu.swiper-container
-                .topmenu__wrapper.swiper-wrapper
-                    .swiper-slide.w-auto
-                        a.topmenu__item(href="#") Автошины
-                    .swiper-slide.w-auto
-                        a.topmenu__item(href="#") Мотошины
-                    .swiper-slide.w-auto
-                        a.topmenu__item(href="#") Диски
-                    .swiper-slide.w-auto
-                        a.topmenu__item(href="#") Аккумуляторы
-                    .swiper-slide.w-auto
-                        a.topmenu__item(href="#") Масла
-                    .swiper-slide.w-auto
-                        a.topmenu__item(href="#") Автотовары
-                    .swiper-slide.w-auto
-                        a.topmenu__item(href="#") Шиномонтаж
-        block filter
+                .header__col.header__col_nav.col-xl-5.col-lg-7.mb-3
+                    nav.header__nav.flex-grow-1.mr-lg-5
+                        button.header__nav-item.header__nav-item_col.d-flex.d-lg-none(type="button")
+                            span.header__nav-icon
+                                svg.icon-fluid
+                                    use(xlink:href="#icon-search")
+                            span.header__btn-title Поиск
+                        a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
+                            span.header__nav-icon
+                                svg.icon-fluid
+                                    use(xlink:href="#icon-compare")
+                            span.header__btn-title Сравнить
+                        a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
+                            span.header__nav-icon
+                                svg.icon-fluid
+                                    use(xlink:href="#icon-car")
+                            span.header__btn-title Выбор авто
+                        a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
+                            span.header__nav-icon
+                                svg.icon-fluid
+                                    use(xlink:href="#icon-case")
+                            span.header__btn-title Заказы
+                        a.header__nav-item.header__nav-item_col.col-lg-3(href="#")
+                            span.header__nav-icon
+                                svg.icon-fluid
+                                    use(xlink:href="#icon-user")
+                            span.header__btn-title Вход | регистрация
+                    a.header__btn.header__btn_inverse(href="#")
+                        svg.header__btn-icon.mr-0
+                            use(xlink:href="#icon-cart")
+            .header__bottom
+                nav.topmenu.swiper-container
+                    .topmenu__wrapper.swiper-wrapper
+                        .swiper-slide.w-auto
+                            a.topmenu__item(href="#") Автошины
+                        .swiper-slide.w-auto
+                            a.topmenu__item(href="#") Мотошины
+                        .swiper-slide.w-auto
+                            a.topmenu__item(href="#") Диски
+                        .swiper-slide.w-auto
+                            a.topmenu__item(href="#") Аккумуляторы
+                        .swiper-slide.w-auto
+                            a.topmenu__item(href="#") Масла
+                        .swiper-slide.w-auto
+                            a.topmenu__item(href="#") Автотовары
+                        .swiper-slide.w-auto
+                            a.topmenu__item(href="#") Шиномонтаж
+            block filter
 
     block wrapper
 
-    footer.footer
-        .container.container_wrapper.d-flex.flex-wrap.px-0
-            .col-lg-2.col-md-3
-                nav.footer__nav
-                    .footer__nav-title Каталог
-                    a.footer__nav-item(href="#") Шины
-                    a.footer__nav-item(href="#") Диски
-                    a.footer__nav-item(href="#") Мотошины
-                    a.footer__nav-item(href="#") Акб
-                    a.footer__nav-item(href="#") Масла
-                    a.footer__nav-item(href="#") Автотовары
-            .col-lg-2.col-md-3
-                nav.footer__nav
-                    .footer__nav-title Услуги
-                    a.footer__nav-item(href="#") Шиномонтаж
-                    a.footer__nav-item(href="#") Сезонное хранение шин и дисков
-                    a.footer__nav-item(href="#") Заправка автокондиционеровов
-                    a.footer__nav-item(href="#") Прокатка дисков
-                    a.footer__nav-item(href="#") Покраска дисков
-            .col-lg-2.col-md-3
-                nav.footer__nav
-                    .footer__nav-title Пользователям
-                    a.footer__nav-item(href="#") Скидки и акции
-                    a.footer__nav-item(href="#") Сравнить
-                    a.footer__nav-item(href="#") Избранное
-                    a.footer__nav-item(href="#") Подбор по авто
-                    a.footer__nav-item(href="#") Шинный калькулятор
-                    a.footer__nav-item(href="#") О компании
-                    a.footer__nav-item(href="#") Новости
-                    a.footer__nav-item(href="#") Статьи
-            .col-lg-2.col-md-3
-                nav.footer__nav
-                    .footer__nav-title Помощь
-                    a.footer__nav-item(href="#") Контакты
-                    a.footer__nav-item(href="#") Вопросы и ответы
-                    a.footer__nav-item(href="#") Оплата и доставка
-                    a.footer__nav-item(href="#") Кредит
-                    a.footer__nav-item(href="#") КупиВкредит
-                    a.footer__nav-item(href="#") Политика конфиденциальности
-            .col-xl-3.offset-xl-1.col-lg-4.col-md-6
-                a.logo.mb-4(href="#")
-                    svg.icon-fluid
-                        use(xlink:href="#icon-logo")
-                .row.align-items-center
-                    .col-8
-                        .contacts.contacts_list.mb-2
-                            .contacts__item.contacts__item_inverse
-                                svg.contacts__item-icon
-                                    use(xlink:href="#icon-placemark")
-                                | г. Ростов-на-Дону
-                            a.contacts__item.contacts__item_inverse(href="#")
-                                svg.contacts__item-icon
-                                    use(xlink:href="#icon-phone-nobg")
-                                | +7 (365) 277-70-68
-                            a.contacts__item.contacts__item_inverse(href="#")
-                                svg.contacts__item-icon
-                                    use(xlink:href="#icon-email")
-                                | office@don-shina.ru
-                    .col-4
-                        nav.social
-                            a.social__item.social__item_inverse(href="#")
-                                svg.icon-fluid
-                                    use(xlink:href="#icon-wapp-bordered")
-                            a.social__item.social__item_inverse(href="#")
-                                svg.icon-fluid
-                                    use(xlink:href="#icon-tg-bordered")
-                .mb-2
-                    img.img-fluid.mr-3(src="../img/visa.png" alt="")
-                    img.img-fluid(src="../img/mc.png" alt="")
-                .copyright © 2021 Все права защищены.
+    block footer
+        footer.footer
+            .container.container_wrapper.d-flex.flex-wrap.px-0
+                .col-lg-2.col-md-3
+                    nav.footer__nav
+                        .footer__nav-title Каталог
+                        a.footer__nav-item(href="#") Шины
+                        a.footer__nav-item(href="#") Диски
+                        a.footer__nav-item(href="#") Мотошины
+                        a.footer__nav-item(href="#") Акб
+                        a.footer__nav-item(href="#") Масла
+                        a.footer__nav-item(href="#") Автотовары
+                .col-lg-2.col-md-3
+                    nav.footer__nav
+                        .footer__nav-title Услуги
+                        a.footer__nav-item(href="#") Шиномонтаж
+                        a.footer__nav-item(href="#") Сезонное хранение шин и дисков
+                        a.footer__nav-item(href="#") Заправка автокондиционеровов
+                        a.footer__nav-item(href="#") Прокатка дисков
+                        a.footer__nav-item(href="#") Покраска дисков
+                .col-lg-2.col-md-3
+                    nav.footer__nav
+                        .footer__nav-title Пользователям
+                        a.footer__nav-item(href="#") Скидки и акции
+                        a.footer__nav-item(href="#") Сравнить
+                        a.footer__nav-item(href="#") Избранное
+                        a.footer__nav-item(href="#") Подбор по авто
+                        a.footer__nav-item(href="#") Шинный калькулятор
+                        a.footer__nav-item(href="#") О компании
+                        a.footer__nav-item(href="#") Новости
+                        a.footer__nav-item(href="#") Статьи
+                .col-lg-2.col-md-3
+                    nav.footer__nav
+                        .footer__nav-title Помощь
+                        a.footer__nav-item(href="#") Контакты
+                        a.footer__nav-item(href="#") Вопросы и ответы
+                        a.footer__nav-item(href="#") Оплата и доставка
+                        a.footer__nav-item(href="#") Кредит
+                        a.footer__nav-item(href="#") КупиВкредит
+                        a.footer__nav-item(href="#") Политика конфиденциальности
+                .col-xl-3.offset-xl-1.col-lg-4.col-md-6
+                    a.logo.mb-4(href="#")
+                        svg.icon-fluid
+                            use(xlink:href="#icon-logo")
+                    .row.align-items-center
+                        .col-8
+                            .contacts.contacts_list.mb-2
+                                .contacts__item.contacts__item_inverse
+                                    svg.contacts__item-icon
+                                        use(xlink:href="#icon-placemark")
+                                    | г. Ростов-на-Дону
+                                a.contacts__item.contacts__item_inverse(href="#")
+                                    svg.contacts__item-icon
+                                        use(xlink:href="#icon-phone-nobg")
+                                    | +7 (365) 277-70-68
+                                a.contacts__item.contacts__item_inverse(href="#")
+                                    svg.contacts__item-icon
+                                        use(xlink:href="#icon-email")
+                                    | office@don-shina.ru
+                        .col-4
+                            nav.social
+                                a.social__item.social__item_inverse(href="#")
+                                    svg.icon-fluid
+                                        use(xlink:href="#icon-wapp-bordered")
+                                a.social__item.social__item_inverse(href="#")
+                                    svg.icon-fluid
+                                        use(xlink:href="#icon-tg-bordered")
+                    .mb-2
+                        img.img-fluid.mr-3(src="../img/visa.png" alt="")
+                        img.img-fluid(src="../img/mc.png" alt="")
+                    .copyright © 2021 Все права защищены.
 
     script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js")
