--- a/src/pug/positions/_banner4.pug
+++ b/src/pug/positions/_banner4.pug
@@ -1,3 +1,4 @@
+//- удалить
 .card.card_column.card_banner
     .banner.banner_noshadow
         img.img-cover(src="../img/content/banners/banner-6.jpg" alt="" title="")
