--- a/src/pug/articles-item.pug
+++ b/src/pug/articles-item.pug
@@ -25,17 +25,13 @@ block wrapper
                 nav.social.mb-4.mb-sm-0
                   .social__title.mr-2 Поделиться:
                   a.social__item.mr-2(href="#")
-                    svg.icon-fluid
-                      use(xlink:href="#icon-vk")
+                    +icon('vk')
                   a.social__item.mr-2(href="#")
-                    svg.icon-fluid
-                      use(xlink:href="#icon-instagram")
+                    +icon('instagram')
                   a.social__item.mr-2(href="#")
-                    svg.icon-fluid
-                      use(xlink:href="#icon-youtube")
+                    +icon('youtube')
                   a.social__item(href="#")
-                    svg.icon-fluid
-                      use(xlink:href="#icon-facebook")
+                    +icon('facebook')
                 a.readmore(href="#") Смотреть на нашем канале
 
     .section
@@ -50,10 +46,10 @@ block wrapper
               h1 Как самостоятельно заменить тормозную жидкость
             .content__date 30 ноября 2021
             .section__picture.d-block.d-lg-none
-              img.img-cover(src="../img/content/media/media-7.jpg" alt="" title="")
+              +img('content/media/media-7.jpg','img-cover')
             .content__intro Любая часть в автомобиле имеет собственный ресурс и требует своевременной замены. Это же касается и тормозной жидкости. Ездить с расходниками, исчерпавшими свой ресурс, становится опасно — у автомобиля существенно увеличивается путь торможения, при резком снижении скорости колёса уходят в занос, а педаль тормоза начинает «проваливаться» и становится менее отзывчивой.
         .section__picture.d-none.d-lg-block
-          img.img-cover(src="../img/content/media/media-7.jpg" alt="" title="")
+          +img('content/media/media-7.jpg','img-cover')
 
     .section
       .section__wrapper.section__wrapper_px.mx-0
