--- a/src/pug/carousel/_newprice.pug
+++ b/src/pug/carousel/_newprice.pug
@@ -1,4 +1,5 @@
-.card.card_column
+//- удалить
+.card.card_column.card_slide
   .card__header
     a.card__picture(href="#")
       img.img-fluid(src="../img/content/cards/card-1.jpg" alt="" title="")
@@ -25,20 +26,17 @@
     .card__intro
       a.card__title(href="#") Зимние шины Yokohama Ice
     .card__footer
-      .card__meta.card__meta_row
+      .card__meta.card__meta_row.align-items-end
         .card__price
           span.card__price-value 7 337.12 
           | ₽
-        .card__price.card__price_old 12 337.12 ₽
-      .d-flex.align-items-center.justify-content-between.mb-3
+        .d-flex.flex-column
+          .card__price.card__price_new 1 840 ₽
+          .text-sm при сдаче старого
+      .d-flex.align-items-center.justify-content-between
         .recalculate
           input.recalculate__field(type="number" name="count" value="4")
           button.recalculate__btn.recalculate__btn_remove(type="button") -
           .recalculate__value 4
           button.recalculate__btn.recalculate__btn_add(type="button") +
         a.btn(href="#") В корзину
-      button.card__btn.card__btn_link.w-100(type="button")
-        span.card__btn-icon
-          svg.icon-fluid
-            use(xlink:href="#icon-plane")
-        | Купить в один клик
