--- a/src/pug/carousel/_wheel.pug
+++ b/src/pug/carousel/_wheel.pug
@@ -1,20 +1,10 @@
+//- удалить
 .card.card_column.card_slide
   .card__header
     a.card__picture(href="#")
-      img.img-fluid(src="../img/content/cards/card-1.jpg" alt="" title="")
+      img.img-fluid(src="../img/content/cards/card-2.jpg" alt="" title="")
     .card__meta.card__meta_left
-      .card__label.card__label_discount Скидка
-      .card__features.card__features_col
-        .card__features-item
-          span.card__features-icon.bg-disabled
-            svg.icon-fluid
-              use(xlink:href="#icon-credit")
-          span.card__features-title.bg-disabled Кредит
-        .card__features-item
-          span.card__features-icon.bg-info
-            svg.icon-fluid
-              use(xlink:href="#icon-warranty")
-          span.card__features-title.bg-info Расширеная гарантия
+      .card__label.card__label_hit хит
     .card__meta.card__meta_right
       button.card__btn.card__btn_icon(type="button")
         svg.card__btn-icon
@@ -24,17 +14,14 @@
         svg.card__btn-icon
           use(xlink:href="#icon-favourite")
         span.card__btn-title Добавить в избранное
-    .card__meta.card__meta_row
-      .card__params 215 / 55  R16
   .card__body
     .card__intro
-      a.card__title(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL
+      a.card__title(href="#") Диск КиК Сильверстоун (КС770-02) 6,5x17
     .card__footer
       .card__meta.card__meta_row
         .card__price
-          span.card__price-value 7 337.12 
+          span.card__price-value 7 040 
           | ₽
-        .card__price.card__price_old 12 337.12 ₽
       .d-flex.align-items-center.justify-content-between
         .recalculate
           input.recalculate__field(type="number" name="count" value="4")
