--- a/src/pug/category/popular.pug
+++ b/src/pug/category/popular.pug
@@ -1,78 +1,35 @@
+- var togglersRadio = [{index: 1, title: 'Все', checked: 'checked'},{index: 2, title: 'Шины'},{index: 3, title: 'Диски'},{index: 4, title: 'Мотошины'},{index: 5, title: 'Аккумуляторы'},{index: 6, title: 'Автозапчасти'},{index: 7, title: 'Масла'},{index: 8, title: 'Автотовары'},{index: 9, title: 'Скидки'},{index: 10, title: 'Хиты'},{index: 11, title: 'Шины на внедорожник'},{index: 12, title: 'Шины на газель'},{index: 13, title: 'Акции'}]
 .section.mb-3
   .section__title Часто выбирают:
   form.form.mb-3(action="#")
     .slides.slides_togglers.swiper-container
-      .slides__nav
-        button.slides__btn.slides__btn_sm.slides__btn_prev.slides_togglers-prev(type="button")
-          svg.icon-fluid
-            use(xlink:href="#icon-arrow-left")
-        button.slides__btn.slides__btn_sm.slides__btn_next.slides_togglers-next(type="button")
-          svg.icon-fluid
-            use(xlink:href="#icon-arrow-right")
+      +slidesNav('slides__btn_sm slides_togglers-prev','slides__btn_sm slides_togglers-next')
       .swiper-wrapper.px-3.px-lg-0
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-1" name="filter-radio" type="radio" value="" checked)
-          label.form__label(for="filter-radio-1") Все
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-2" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-2") Шины
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-3" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-3") Диски
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-4" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-4") Мотошины
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-5" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-5") Аккумуляторы
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-6" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-6") Автозапчасти
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-7" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-7") Масла
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-8" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-8") Автотовары
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-9" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-9") Скидки
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-10" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-10") Хиты
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-11" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-11") Шины на внедорожник
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-12" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-12") Шины на газель
-        .swiper-slide
-          input.form__toggler.form__toggler_radio(id="filter-radio-13" name="filter-radio" type="radio" value="")
-          label.form__label(for="filter-radio-13") Акции
+        each togglersRadio__item in togglersRadio
+          .swiper-slide
+            +radio(togglersRadio__item.index, togglersRadio__item.title, togglersRadio__item.checked)
     .slides.slides_grid.swiper-container.pt-1.pb-4
-      .slides__nav
-        button.slides__btn.slides__btn_prev.slides_grid-prev(type="button")
-          svg.icon-fluid
-            use(xlink:href="#icon-arrow-left")
-        button.slides__btn.slides__btn_next.slides_grid-next(type="button")
-          svg.icon-fluid
-            use(xlink:href="#icon-arrow-right")
+      +slidesNav
       .swiper-wrapper
         .swiper-slide
-          include ../positions/plain.pug
+          +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_column')
         .swiper-slide
-          include ../positions/plain.pug
+          +card('12 337.12','','Зимние шины Yokohama Ice Guard IG55','',false,false,false,false,false,true,true,true,'card_column')
         .swiper-slide
-          include ../positions/banner1.pug
+          +banner('content/banners/banner-3.jpg')
         .swiper-slide
-          include ../positions/sale.pug
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','sale',false,false,true,false,false,false,false,true,'card_column')
         .swiper-slide
-          include ../positions/banner2.pug
+          +banner('content/banners/banner-4.jpg')
         .swiper-slide
-          include ../positions/discount.pug
+          +card('12 337.12','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','discount',true,true,false,false,false,false,false,true,'card_column')
         .swiper-slide
-          include ../positions/hit.pug
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55','hit',false,false,false,true,true,false,false,true,'card_column')
         .swiper-slide
-          include ../positions/sale.pug
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','sale',false,false,false,false,true,false,false,true,'card_column')
         .swiper-slide
-          include ../positions/plain.pug
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17','sale',false,false,false,true,false,false,false,true,'card_column')
+        .swiper-slide
+          +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_column')
+        .swiper-slide
+          +card('','14 000','Шины Yokohama Ice Guard IG55 215/55 R17 98T','',false,false,false,false,false,false,false,true,'card_column')
