--- a/src/pug/positions/_banner2.pug
+++ b/src/pug/positions/_banner2.pug
@@ -1,3 +1,4 @@
+//- удалить
 .card.card_column.card_banner
     a.card__picture(href="#")
         img.img-cover(src="../img/content/banners/banner-4.jpg" alt="" title="")
